# LLM-Evolve

./: .gitignore  README.md  main.py  pyproject.toml  test_evolution.py
src/: evolution.py  llm_provider.py
src/core/: engine.py  llm.py  types.py
src/tasks/: base.py  compression.py  primes.py  registry.py  sorting.py  sudoku.py
src/utils/: storage.py
